--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "seed": "ts-node src/seeders/role.seeder.ts",
-    "dev": "ts-node-dev --files src/index.ts",
+    "dev": "ts-node-dev --files src/app.ts",
     "build": "tsc && cp /package.json ./dist",
     "start": "node dist/index.js"
   },
